{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 23,
  "lineage": "78540e6c-f8cc-15c8-d60e-84216f702179",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "c2_server_static",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.134.53.135",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2025-04-30T08:52:09.202-07:00",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/project-asritha-kat/regions/us-central1/addresses/c2-server-static",
            "label_fingerprint": "vezUS-42LLM=",
            "name": "c2-server-static",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "project-asritha-kat",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-asritha-kat/regions/us-central1/addresses/c2-server-static",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "users": [
              "https://www.googleapis.com/compute/v1/projects/project-asritha-kat/zones/us-central1-c/instances/c2-server"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_dns",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "53"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-05-01T18:47:04.491-07:00",
            "deny": [],
            "description": "Allow DNS traffic",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/project-asritha-kat/global/firewalls/default-allow-dns",
            "log_config": [],
            "name": "default-allow-dns",
            "network": "https://www.googleapis.com/compute/v1/projects/project-asritha-kat/global/networks/default",
            "priority": 1000,
            "project": "project-asritha-kat",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-asritha-kat/global/firewalls/default-allow-dns",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "dns-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-04-30T09:05:44.631-07:00",
            "deny": [],
            "description": "Allow HTTP traffic",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/project-asritha-kat/global/firewalls/default-allow-http",
            "log_config": [],
            "name": "default-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/project-asritha-kat/global/networks/default",
            "priority": 1000,
            "project": "project-asritha-kat",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-asritha-kat/global/firewalls/default-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "http-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-04-30T09:05:44.622-07:00",
            "deny": [],
            "description": "Allow HTTPS traffic",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/project-asritha-kat/global/firewalls/default-allow-https",
            "log_config": [],
            "name": "default-allow-https",
            "network": "https://www.googleapis.com/compute/v1/projects/project-asritha-kat/global/networks/default",
            "priority": 1000,
            "project": "project-asritha-kat",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-asritha-kat/global/firewalls/default-allow-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "https-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "c2_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "guest_os_features": [
                  "UEFI_COMPATIBLE",
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "GVNIC",
                  "SEV_CAPABLE",
                  "SEV_LIVE_MIGRATABLE_V2"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20250415",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/project-asritha-kat/zones/us-central1-c/disks/c2-server"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-05-05T18:05:33.940-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/project-asritha-kat/zones/us-central1-c/instances/c2-server",
            "instance_id": "5886294515214769842",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "umassctf25:ecdsa-sha2-nistp256 AAAAE2VjZHNhLXNoYTItbmlzdHAyNTYAAAAIbmlzdHAyNTYAAABBBLQX589KkwmG1NJ/CQIxnXPzHJelKOPsE7ToVDdJI5wsLqPdT7mZPe+fFUmh+RI3OKR9QQ+7mDMN3mWOvrako88= google-ssh {\"userName\":\"umassctf25@gmail.com\",\"expireOn\":\"2025-05-06T01:11:02+0000\"}\numassctf25:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAHMcxIJ1ltCz0UZ2eFE+/1eGYJC87MbQm1OAQ5ePxD/QFaKmB6rNp2W0o9OtFX0fvDwT3zcA8d0k/MnLE3ZAKAzGmc/aGpgzY4HyMMpKslXWunBdxURK6VtRCCm2gGzd376yvwGWAGGMvUzJY3DnKMW/9qnCAiYu [...]
            },
            "metadata_fingerprint": "aidwLEpFpNk=",
            "name": "c2-server",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.134.53.135",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/project-asritha-kat/global/networks/default",
                "network_ip": "10.128.0.6",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/project-asritha-kat/regions/us-central1/subnetworks/default",
                "subnetwork_project": "project-asritha-kat"
              }
            ],
            "project": "project-asritha-kat",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-asritha-kat/zones/us-central1-c/instances/c2-server",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow_dns",
              "http-server",
              "https-server"
            ],
            "tags_fingerprint": "6smc4R4d39I=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-central1-c"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "google_compute_address.c2_server_static"
          ]
        }
      ]
    }
  ]
}